cabal-version:      3.0
name:               covtest
-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:
    A test driver with support for generating per-test coverage information.

-- A longer description of the package.
-- description:
homepage:           https://github.com/LeoZieger/SBFL-TestDriver
license:            BSD-3-Clause
license-file:       LICENSE
author:             Leonard Zieger
maintainer:         leonard.zieger@student.uni-tuebingen.de
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Test.Covtest

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base >=4.14 && < 4.18,
                      hpc >= 0.6.1 && < 0.7

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010
